11-4-2008
comment out tracking & updates for redeploy under 1.4
posted to website